assets/scss/_global.scss
.padding__wrapper {
  background: $pure-white;
  padding-top: $padding * 2;
  padding-bottom: $padding * 3;
}

.content__wrapper {
  padding: 0 $padding;
}

.button {
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: $paddingButton;
  color: $pure-white;
  font-weight: 700;
  font-family: $font-family;
}

h2 {
  font-size: 2.2rem;
  margin-top: 0;
}

h3 {
  font-size: 1.5rem;
  margin-top: 0;
  margin-bottom: 0.8rem;
}

p {
  font-size: 1.2rem;
  line-height: 1.5rem;
  margin: 0 0 2rem 0;
}

a {
  color: $curious-blue;

  &:hover,
  &:visited {
    color:  $curious-blue;
  }
}

@media only screen and (min-width: 700px) {
  .content__wrapper {
    padding: 0 $padding * 2;
  }
}

